# yaya-ai

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251211_021108_create_settings_table.rs  m20251212_012605_create_models_table.rs
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/entities/: conversations.rs  messages.rs  mod.rs  models.rs  prelude.rs  settings.rs
src-tauri/src/services/: ai.rs  chat.rs  mod.rs  session.rs  settings.rs
src/components/chat/: chat-area.tsx  layout.tsx  message-bubble.tsx  settings-dialog.tsx  sidebar-content.tsx
src/hooks/app/: useapp.tsx
src/hooks/setting/: usedefaultmodel.tsx  usemodelpovider.tsx
src/pages/about/: index.tsx
src/pages/home/: index.tsx
src/pages/layout/: index.tsx
src/pages/layout/compment/: drawerbar.tsx  haderbar.tsx  sidebar.tsx
src/pages/me/: index.tsx
src/pages/setting/: index.tsx
src/pages/setting/compment/: defaultmodel.tsx  modelpovider.tsx
src/router/: index.tsx
src/services/: db.tsx  openai.tsx
src/store/: apistore.tsx  init.tsx  modelstore.tsx
src/types/: types.ts
