[package]
name = "yaya-ai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yaya_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc",features = ["sqlx-sqlite", "runtime-tokio-rustls","macros"]}
tokio = "1.48.0"
reqwest = {version = "0.12.24",features = ["json","stream"]}
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
futures = "0.3.31"
migration = { path = "migration" }
